--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Main container for centering the game -->
     <div class="container">
+        <!-- Game card wrapper -->
         <div class="gameWrapper">
 
+            <!-- Title and player turn status -->
             <header class="header">
                 <h1 class="title">TIC-TAC-TOE</h1>
                 <div class="status" id="status"></div>
             </header>
 
+            <!-- 3x3 game grid with 9 cells (indexed 0-8) -->
             <div class="gameBoard" id="gameBoard">
                 <div class="cell" data-index="0"></div>
                 <div class="cell" data-index="1"></div>
@@ -28,20 +32,26 @@
                 <div class="cell" data-index="8"></div>
             </div>
 
+            <!-- Reset button to start a new round -->
             <div class="controls">
                 <button class="resetBtn" id="resetBtn">Start New Game</button>
             </div>
 
+            <!-- Players score tracking section -->
 
             <div class="scoreBoard">
                 <div class="scoringText">Scoreboard</div>
 
+                <!-- Score display for both players -->
                 <div class="scoreContainer">
                     <div class="scoreItem">
+                        <!-- Player X score -->
                         <span class="scoreLabel">Player X</span>
                         <span class="scoreValue" id="scoreX">0</span>
                     </div>
+                    <!-- Divider line between scores -->
                     <div class="scoreDiv"></div>
+                    <!-- Player O score -->
                     <div class="scoreItem">
                         <span class="scoreLabel">Player O</span>
                         <span class="scoreValue" id="scoreO">0</span>
@@ -52,6 +62,7 @@
         </div>
     </div>
 
+    <!-- Winner announcement popup  -->
     <div class="winnerDisplay" id="winnerDisplay">
         <div class="content">
             <div class="message" id="message"></div>
@@ -59,6 +70,7 @@
         </div>
     </div>
 
+    <!-- Tic-tac-toe game logic -->
     <script src="index.js"></script>
 </body>
 </html>
